<resources>
    <string name="app_name">邑大课表</string>
    <string name="hello">Hello timetable3!</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登陆</string>
    <string name="action_del_all">清空课表</string>
    <string name="action_finish">完成</string>
    <string-array name="nav_drawer_items">
        <item>登陆</item>
        <item>信息中心</item>
        <item>日视图</item>
        <item>周视图</item>
    </string-array>
    <string-array name="week_array">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
    <string-array name="course_index_array">
        <item>第一节课</item>
        <item>第二节课</item>
        <item>第三节课</item>
        <item>第四节课</item>
        <item>第五节课</item>
    </string-array>
    <string-array name="course_type_array">
        <item>必修</item>
        <item>选修</item>
    </string-array>
    <string-array name="remind_time_array">
        <item>上课前 10 分钟</item>
        <item>上课前 15 分钟</item>
        <item>上课前 20 分钟</item>
        <item>上课前 30 分钟</item>
    </string-array>
    <string name="pref_key_time_1">pref_key_time_1</string>
    <string name="pref_key_time_2">pref_key_time_2</string>
    <string name="pref_key_time_3">pref_key_time_3</string>
    <string name="pref_key_time_4">pref_key_time_4</string>
    <string name="pref_key_time_5">pref_key_time_5</string>
    <string name="pref_key_course_time">pref_key_course_time</string>
    <string name="pref_key_course_break">pref_key_course_break</string>
    <string name="pref_key_week">pref_key_week</string>
    <string name="pref_key_remind">pref_key_remind</string>
    <string name="courseNumber">第%d节课</string>
    <string name="course_new">添加</string>
    <string name="title_activity_new_course">邑大课表</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discard_label">取消</string>
    <string name="save_label">保存</string>
    <string name="fa_glass"></string>
    <string name="fa_music"></string>
    <string name="fa_search"></string>
    <string name="fa_envelope_o"></string>
    <string name="fa_heart"></string>
    <string name="fa_star"></string>
    <string name="fa_star_o"></string>
    <string name="fa_user"></string>
    <string name="fa_film"></string>
    <string name="fa_th_large"></string>
    <string name="fa_th"></string>
    <string name="fa_th_list"></string>
    <string name="fa_check"></string>
    <string name="fa_times"></string>
    <string name="fa_search_plus"></string>
    <string name="fa_search_minus"></string>
    <string name="fa_power_off"></string>
    <string name="fa_signal"></string>
    <string name="fa_cog"></string>
    <string name="fa_trash_o"></string>
    <string name="fa_home"></string>
    <string name="fa_file_o"></string>
    <string name="fa_clock_o"></string>
    <string name="fa_road"></string>
    <string name="fa_download"></string>
    <string name="fa_arrow_circle_o_down"></string>
    <string name="fa_arrow_circle_o_up"></string>
    <string name="fa_inbox"></string>
    <string name="fa_play_circle_o"></string>
    <string name="fa_repeat"></string>
    <string name="fa_refresh"></string>
    <string name="fa_list_alt"></string>
    <string name="fa_lock"></string>
    <string name="fa_flag"></string>
    <string name="fa_headphones"></string>
    <string name="fa_volume_off"></string>
    <string name="fa_volume_down"></string>
    <string name="fa_volume_up"></string>
    <string name="fa_qrcode"></string>
    <string name="fa_barcode"></string>
    <string name="fa_tag"></string>
    <string name="fa_tags"></string>
    <string name="fa_book"></string>
    <string name="fa_bookmark"></string>
    <string name="fa_print"></string>
    <string name="fa_camera"></string>
    <string name="fa_font"></string>
    <string name="fa_bold"></string>
    <string name="fa_italic"></string>
    <string name="fa_text_height"></string>
    <string name="fa_text_width"></string>
    <string name="fa_align_left"></string>
    <string name="fa_align_center"></string>
    <string name="fa_align_right"></string>
    <string name="fa_align_justify"></string>
    <string name="fa_list"></string>
    <string name="fa_outdent"></string>
    <string name="fa_indent"></string>
    <string name="fa_video_camera"></string>
    <string name="fa_picture_o"></string>
    <string name="fa_pencil"></string>
    <string name="fa_map_marker"></string>
    <string name="fa_adjust"></string>
    <string name="fa_tint"></string>
    <string name="fa_pencil_square_o"></string>
    <string name="fa_share_square_o"></string>
    <string name="fa_check_square_o"></string>
    <string name="fa_arrows"></string>
    <string name="fa_step_backward"></string>
    <string name="fa_fast_backward"></string>
    <string name="fa_backward"></string>
    <string name="fa_play"></string>
    <string name="fa_pause"></string>
    <string name="fa_stop"></string>
    <string name="fa_forward"></string>
    <string name="fa_fast_forward"></string>
    <string name="fa_step_forward"></string>
    <string name="fa_eject"></string>
    <string name="fa_chevron_left"></string>
    <string name="fa_chevron_right"></string>
    <string name="fa_plus_circle"></string>
    <string name="fa_minus_circle"></string>
    <string name="fa_times_circle"></string>
    <string name="fa_check_circle"></string>
    <string name="fa_question_circle"></string>
    <string name="fa_info_circle"></string>
    <string name="fa_crosshairs"></string>
    <string name="fa_times_circle_o"></string>
    <string name="fa_check_circle_o"></string>
    <string name="fa_ban"></string>
    <string name="fa_arrow_left"></string>
    <string name="fa_arrow_right"></string>
    <string name="fa_arrow_up"></string>
    <string name="fa_arrow_down"></string>
    <string name="fa_share"></string>
    <string name="fa_expand"></string>
    <string name="fa_compress"></string>
    <string name="fa_plus"></string>
    <string name="fa_minus"></string>
    <string name="fa_asterisk"></string>
    <string name="fa_exclamation_circle"></string>
    <string name="fa_gift"></string>
    <string name="fa_leaf"></string>
    <string name="fa_fire"></string>
    <string name="fa_eye"></string>
    <string name="fa_eye_slash"></string>
    <string name="fa_exclamation_triangle"></string>
    <string name="fa_plane"></string>
    <string name="fa_calendar"></string>
    <string name="fa_random"></string>
    <string name="fa_comment"></string>
    <string name="fa_magnet"></string>
    <string name="fa_chevron_up"></string>
    <string name="fa_chevron_down"></string>
    <string name="fa_retweet"></string>
    <string name="fa_shopping_cart"></string>
    <string name="fa_folder"></string>
    <string name="fa_folder_open"></string>
    <string name="fa_arrows_v"></string>
    <string name="fa_arrows_h"></string>
    <string name="fa_bar_chart_o"></string>
    <string name="fa_twitter_square"></string>
    <string name="fa_facebook_square"></string>
    <string name="fa_camera_retro"></string>
    <string name="fa_key"></string>
    <string name="fa_cogs"></string>
    <string name="fa_comments"></string>
    <string name="fa_thumbs_o_up"></string>
    <string name="fa_thumbs_o_down"></string>
    <string name="fa_star_half"></string>
    <string name="fa_heart_o"></string>
    <string name="fa_sign_out"></string>
    <string name="fa_linkedin_square"></string>
    <string name="fa_thumb_tack"></string>
    <string name="fa_external_link"></string>
    <string name="fa_sign_in"></string>
    <string name="fa_trophy"></string>
    <string name="fa_github_square"></string>
    <string name="fa_upload"></string>
    <string name="fa_lemon_o"></string>
    <string name="fa_phone"></string>
    <string name="fa_square_o"></string>
    <string name="fa_bookmark_o"></string>
    <string name="fa_phone_square"></string>
    <string name="fa_twitter"></string>
    <string name="fa_facebook"></string>
    <string name="fa_github"></string>
    <string name="fa_unlock"></string>
    <string name="fa_credit_card"></string>
    <string name="fa_rss"></string>
    <string name="fa_hdd_o"></string>
    <string name="fa_bullhorn"></string>
    <string name="fa_bell"></string>
    <string name="fa_certificate"></string>
    <string name="fa_hand_o_right"></string>
    <string name="fa_hand_o_left"></string>
    <string name="fa_hand_o_up"></string>
    <string name="fa_hand_o_down"></string>
    <string name="fa_arrow_circle_left"></string>
    <string name="fa_arrow_circle_right"></string>
    <string name="fa_arrow_circle_up"></string>
    <string name="fa_arrow_circle_down"></string>
    <string name="fa_globe"></string>
    <string name="fa_wrench"></string>
    <string name="fa_tasks"></string>
    <string name="fa_filter"></string>
    <string name="fa_briefcase"></string>
    <string name="fa_arrows_alt"></string>
    <string name="fa_users"></string>
    <string name="fa_link"></string>
    <string name="fa_cloud"></string>
    <string name="fa_flask"></string>
    <string name="fa_scissors"></string>
    <string name="fa_files_o"></string>
    <string name="fa_paperclip"></string>
    <string name="fa_floppy_o"></string>
    <string name="fa_square"></string>
    <string name="fa_bars"></string>
    <string name="fa_list_ul"></string>
    <string name="fa_list_ol"></string>
    <string name="fa_strikethrough"></string>
    <string name="fa_underline"></string>
    <string name="fa_table"></string>
    <string name="fa_magic"></string>
    <string name="fa_truck"></string>
    <string name="fa_pinterest"></string>
    <string name="fa_pinterest_square"></string>
    <string name="fa_google_plus_square"></string>
    <string name="fa_google_plus"></string>
    <string name="fa_money"></string>
    <string name="fa_caret_down"></string>
    <string name="fa_caret_up"></string>
    <string name="fa_caret_left"></string>
    <string name="fa_caret_right"></string>
    <string name="fa_columns"></string>
    <string name="fa_sort"></string>
    <string name="fa_sort_asc"></string>
    <string name="fa_sort_desc"></string>
    <string name="fa_envelope"></string>
    <string name="fa_linkedin"></string>
    <string name="fa_undo"></string>
    <string name="fa_gavel"></string>
    <string name="fa_tachometer"></string>
    <string name="fa_comment_o"></string>
    <string name="fa_comments_o"></string>
    <string name="fa_bolt"></string>
    <string name="fa_sitemap"></string>
    <string name="fa_umbrella"></string>
    <string name="fa_clipboard"></string>
    <string name="fa_lightbulb_o"></string>
    <string name="fa_exchange"></string>
    <string name="fa_cloud_download"></string>
    <string name="fa_cloud_upload"></string>
    <string name="fa_user_md"></string>
    <string name="fa_stethoscope"></string>
    <string name="fa_suitcase"></string>
    <string name="fa_bell_o"></string>
    <string name="fa_coffee"></string>
    <string name="fa_cutlery"></string>
    <string name="fa_file_text_o"></string>
    <string name="fa_building_o"></string>
    <string name="fa_hospital_o"></string>
    <string name="fa_ambulance"></string>
    <string name="fa_medkit"></string>
    <string name="fa_fighter_jet"></string>
    <string name="fa_beer"></string>
    <string name="fa_h_square"></string>
    <string name="fa_plus_square"></string>
    <string name="fa_angle_double_left"></string>
    <string name="fa_angle_double_right"></string>
    <string name="fa_angle_double_up"></string>
    <string name="fa_angle_double_down"></string>
</resources>